# p4check

./: .gitignore  Makefile  README.md  p4check.install  p4check.opam
examples/: #basic_ipv4bug.p4#  .#basic_ipv4bug.p4  basic_recirc.p4  basic_warningipv4.p4  open_switch.p4  recirc_undead_code.p4  stack_error.p4  switch_16.p4i
lib/: .merlin  Hashcons.ml  dune  dune~  math.ml  p4check.ml  p4check.ml~  util.ml  util.mli
