opam-version: "2.0"
version: "0.1.1"
synopsis: "P4Check: Type System for Tracking Header Validity in P4-16 programs"
maintainer: "ecampbell@cs.cornell.edu"
authors: "Nate Foster <jnfoster@cs.cornell.edu>, Eric Campbell <ecampbell@cs.cornell.edu>"
homepage: ""
dev-repo: ""
bug-reports: ""
license: "Apache2"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "ocaml" {>= "4.04.0"}
  "dune" {build}
  "menhir"
  "ANSITerminal"
  "bignum"
  "core"
  "ppx_deriving_yojson"
  "ppx_jane"
  "yojson"
  "petr4"
]
